--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+<form materialize class="col s12">
+  <div class="row">
+    <div class="input-field col s6">
+      <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+      <label for="first_name">First Name</label>
+    </div>
+  </div>
+</form>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
