--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 
 $roboto-font-path: "../node_modules/materialize-css/dist/fonts/roboto/" !default; 
 $primary-color: color("teal", "base");
+$secondary-color: #125668;
 
 @import '../node_modules/materialize-css/sass/materialize.scss';
 
