Registro de usuario
Verificacion de datos obligatorios.
Verificacion de datos correctos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,6 +59,7 @@
 </nav>
 
 <div class="container">
+  <!-- lo que angular rellena de acuerdo al estado actual. -->
   <router-outlet></router-outlet>
   
   <a>
