--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -7,7 +7,7 @@
   <div class="col s12 m7 l7">
     <div class="box">
       <h4>Registrate</h4>
-      <form class="sign-form" #frmSignup="ngForm" (ngSubmit)="addUser(frmSignup)">
+      <form class="sign-form" #frmSignup="ngForm" >
         <a href="/#/signin">Ya tengo una cuenta</a>
         <div class="section">
           <a class="btn btn-fb hide-on-med-and-down">
@@ -19,12 +19,41 @@
         </div>
         <div class="divider"></div>
         <div class="section">
-          <input type="email" name="email" placeholder="Email" #email="ngModel" [(ngModel)]="userService.selectedUser.email">
-          <input type="text" name="fullname" placeholder="Nombre Completo" #fullname="ngModel" [(ngModel)]="userService.selectedUser.fullname">
-          <input type="text" name="username" placeholder="Usuario" #username="ngModel" [(ngModel)]="userService.selectedUser.username">
-          <input type="password" name="password" placeholder="Contrasena" #password="ngModel" [(ngModel)]="userService.selectedUser.password">
-          <input type="password" name="confirm" placeholder="Confirmar Contrasena">
-          <button class="btn waves-effect waves-ligth" type="submit">Registrar</button>
+          <div class="input-field">
+            <input type="email" id="email" name="email" #email="ngModel" class="validate"
+              [(ngModel)]="userService.selectedUser.email" required="" aria-required="true">
+            <label for="email" data-error="No es un correo electronico" data-success="">Email *</label>
+          </div>
+
+          <div class="input-field">
+            <input type="text" id="fullname" name="fullname" #fullname="ngModel"
+              [(ngModel)]="userService.selectedUser.fullname" class="validate" required="" aria-required="true">
+            <label for="fullname" data-error="Ingrese un valor" data-success="">Nombre Completo *</label>
+          </div>
+
+          <div class="input-field">
+            <input type="text" id="username" name="username" #username="ngModel"
+              [(ngModel)]="userService.selectedUser.username" class="validate" required="" aria-required="true">
+            <label for="fullname" data-error="Ingrese un valor" data-success="">Usuario *</label>
+          </div>
+
+          <div class="input-field">
+            <input type="password" id="password" name="password" #password="ngModel"
+              [(ngModel)]="userService.selectedUser.password" class="validate" required="" aria-required="true">
+            <label for="fullname" data-error="Ingrese un valor" data-success="">Contrasena *</label>
+          </div>
+
+          <div class="input-field">
+            <input type="password" id="confirm" name="confirm" class="validate" [(ngModel)]="valPassword"
+            required="" aria-required="true">
+            <label for="fullname" data-error="Ingrese un valor" data-success="">Verificar contrasena</label>
+          </div>
+
+          <div class="input-field">
+            <button class="btn waves-effect waves-ligth" style="margin-right: 3%"
+              (click)="resetForm(frmSignup)">Limpiar</button>
+            <button class="btn waves-effect waves-light" (click)="addUser(frmSignup)">Registrar</button>
+          </div>
         </div>
       </form>
     </div>
