--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,83 +1,41 @@
-<div class="navbar-fixed">
-  <!-- Dropdown Structure -->
-  <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">one</a></li>
-    <li><a href="#!">two</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">three</a></li>
-  </ul>
-
-  <nav>
-    <div class="nav-wrapper left">
-      <form>
-        <div class="input-field">
-          <input id="search" type="search" required>
-          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-          <i class="material-icons">close</i>
-        </div>
-      </form>
-    </div>
-    <a href="#" class="brand-logo center">Sigecon-App</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="#"><i class="large material-icons">help</i></a></li>
-      <li><a href="#"><i class="large material-icons">favorite</i></a></li>
-      <!-- Dropdown Trigger -->
-      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">User<i
-            class="material-icons right">add_a_photo</i></a></li>
-    </ul>
-  </nav>
-</div>
-
-<!-- Dropdown Structure -->
-<ul id="dropdown2" class="dropdown-content">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">three</a></li>
-</ul>
-
-<nav class="nav-extended">
-  <div class="nav-wrapper">
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <!-- Dropdown Trigger -->
-      <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Add<i class="material-icons right">add</i></a>
-      </li>
-    </ul>
+<!-- <nav>
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo center">Sigecon APP</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a *ngIf="expression" href="home">Inicio</a></li>
+          <li><a  href="badges.html">Acerca de</a></li>
+          <li><a href="#signup">Registrarse</a></li>
+          <li><a href="#signin">Iniciar sesion</a></li>
+        </ul>
+      </div>
+    </nav>
   </div>
-  <div class="nav-content">
-    <ul class="tabs tabs-transparent">
-      <!-- <li class="tab"><a class="active" href="#signup">Registrarse</a></li>
-      <li class="tab"><a href="#signin">Ingresar</a></li> -->
-      <li class="tab"><a href="#all">Todo</a></li>
-      <li class="tab"><a href="#notes">Notas</a></li>
-      <li class="tab"><a href="#errors">Errores</a></li>
-      <li class="tab"><a href="#process">Acciones</a></li>
-      <li class="tab"><a href="#questions">Preguntas</a></li>
-    </ul>
+</nav> -->
+
+<!-- nav -->
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/">Home</a>
+    <a class="nav-item nav-link" (click)="logout()">Logout</a>
   </div>
 </nav>
 
-<div class="container">
-  <!-- lo que angular rellena de acuerdo al estado actual. -->
-  <router-outlet></router-outlet>
-  
-  <a>
-    <!-- <div id="signup">
-      <app-signup></app-signup>
+<!-- main content container -->
+<div class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 offset-sm-2">
+        <router-outlet></router-outlet>
+      </div>
     </div>
-    <div id="signin">
-      <app-signin></app-signin>
-    </div> -->
-    <div id="all">Todo</div>
-    <div id="notes">Notas</div>
-    <div id="errors">Errores</div>
-    <div id="process">Procesos</div>
-    <div id="questions">Preguntas</div>
-  </a>
+  </div>
 </div>
 
-<footer class="page-footer">
+<!-- <router-outlet></router-outlet> -->
+
+<!-- <footer class="page-footer">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -105,4 +63,4 @@
       <a class="grey-text text-lighten-4 right" href="#!">kinsoft</a>
     </div>
   </div>
-</footer>
+</footer> -->
