--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,3 +19,12 @@
     background-color: #2d6599;
   }
 }
+
+.icon_style {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+}
