--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,13 @@
+<nav>
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">Logo</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="#/login">Iniciar Sesion</a></li>
+      <li><a href="#/signup">Registrarse</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div *ngIf="error" class="row" id="alert_box">
   <div class="col s12 m12">
     <div class="card red darken-1">
@@ -14,7 +24,7 @@
     </div>
   </div>
 </div>
-
+  
 <div class="container">
   <div class="row"></div>
   <div class="row">
@@ -75,3 +85,5 @@
     </div>
   </div>
 </div>
+
+<app-footer></app-footer>
