--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,7 +1,18 @@
+<nav>
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">Logo</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="#/login">Iniciar Sesion</a></li>
+      <li><a href="#/signup">Registrarse</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div class="container">
   <div class="row"></div>
   <div class="row">
     <div class="col s12 m12 l12">
+      <br>
       <div class="box">
         <h4>Registrate</h4>
         <form class="sign-form" #frmSignup="ngForm">
@@ -63,7 +74,8 @@
                     </div>
                   </div>
                 </div>
-                Registrar</button>
+                Registrar
+              </button>
             </div>
           </div>
         </form>
@@ -71,3 +83,5 @@
     </div>
   </div>
 </div>
+
+<app-footer></app-footer>
